fix TinyMCE (table) panel height.
The table panel height was too small, resulting in panels which had no
or only partially visible buttons (cancel / save).

--- a/plonetheme/blueberry/scss/tinymce.scss
+++ b/plonetheme/blueberry/scss/tinymce.scss
@@ -33,7 +33,11 @@ table.mceLayout {
 
 /* TinyMCE dialog styles */
 
+#table .dialog-wrapper,
 .dialog-wrapper {
+  &#content {
+    font-size: inherit;
+  }
 
   .formTabs {
     @include tab-list;
@@ -58,6 +62,10 @@ table.mceLayout {
       }
     }
 
+  }
+
+  .panel_wrapper div.current {
+    height: auto;
   }
 
   .mceActionPanel {
